# mem-opt

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  compile_commands.json
eval/: client_base_log  client_bp_log  tas_base_log  tas_bp_log
examples/: annotate_ptr.c  annotate_ptr.ll  annotate_var.c  array.c  array.ll  batch_process_test1.c  fast_flows_O0.ll  hello-world.ll  hello_world.bc  hello_world.c  hello_world.ll  hello_world_O2.ll  lookup.bc  lookup.c  lookup.ll  lookup_O1.ll  lookup_O2.ll
include/: BatchMaker.h  CacheUsageAnalysis.h  CacheUsageAnalysisPass.h  CacheUsageInfo.h  Macros.h
scripts/: run_pass.sh  run_test.sh
src/: BatchMaker.cpp  BatchMaker.h  BatchMakerPass.cpp  BatchMakerPass.h  BatchProcess.cpp  BatchProcess.h  BatchProcessPass.cpp  BatchProcessPass.h  BlockPredication.cpp  BlockPredication.h  CMakeLists.txt  CacheUsageAnalysis.cpp  CacheUsageAnalysis.h  CacheUsageAnalysisPass.cpp  CacheUsageAnalysisPass.h  CacheUsageInfo.cpp  ForLoop.cpp  ForLoop.h  ForLoopV2.cpp  ForLoopV2.h  HelloFunctionPass.cpp  IRLoop.h  LoopFission.cpp  LoopFission.h  LoopSplitter.cpp  LoopSplitter.h  Macros.h  PacketPathAnalysis.cpp  PacketPathAnalysis.h  SimplePrototypePasses.cpp  ToolUtil.cpp  ToolUtil.h  Util.cpp  Util.h
src/BatchMaker/: BatchMaker.cpp  BatchMaker.h  CMakeLists.txt
src/BatchProcess/: BatchProcess.cpp  CMakeLists.txt
src/BlockPredication/: BlockPredication.cpp  BlockPredication.h  CMakeLists.txt
src/CacheAnalysis/: CMakeLists.txt  CacheUsageAnalysis.cpp  CacheUsageInfo.cpp
src/Common/: CMakeLists.txt  Macros.h  ToolUtil.cpp  ToolUtil.h  Util.cpp  Util.h
src/PacketPathAnalysis/: CMakeLists.txt  PacketPathAnalysis.cpp  PacketPathAnalysis.h
src/PassWrapper/: BatchMakerPass.cpp  BatchMakerPass.h  BatchProcessPass.cpp  CMakeLists.txt  CacheUsageAnalysisPass.cpp  CacheUsageAnalysisPass.h  LoopSplitterPass.cpp  LoopSplitterPass.h
src/TraceLinearizer/: CMakeLists.txt  PathDetector.cpp  PathDetector.hpp
src/passes/: CMakeLists.txt  CacheUsageAnalysisPass.cpp
test/: CMakeLists.txt  catch.hpp  simple_test.cpp
test/litTests/: CMakeLists.txt  lit.site.cfg.in
test/litTests/annotation/: annotate_struct.c  lookup.c
test/litTests/batch_fn_test1/: batch_process_test1.c  batch_process_test1_mem2reg.ll  run_test.sh
test/litTests/batch_fn_test2/: batch_process_test1  batch_process_test1.c  batch_process_test1.ll  batch_process_test1_mem2reg.ll  batch_process_test1_tas.ll  run_test.sh  test.c
test/litTests/cache_analysis_test1/: cache_analysis_test1.c  run_test.sh
test/litTests/fast_flow_test2/: fast_flows_tas.ll  run_test.sh
test/scripttests/batch_fn_test1/: batch_process_test1  batch_process_test1.ll  batch_process_test1_tas.ll  run_test.sh  test.c
test/scripttests/batch_fn_test2/: batch_process_test1  batch_process_test1.h  batch_process_test1.ll
test/scripttests/fast_flow_test2/: fast_flows.ll  fast_flows_mem2reg.ll
test/unit/: CMakeLists.txt  simple_test.cpp  test_main.cpp  test_util.h
test/unit/inputs/: batch_process_test1.ll
test/unittests/: CMakeLists.txt  batchMaker_test.cpp  blockPredication_test.cpp  cacheAnalysis_test.cpp  cache_test4.c  common_test.cpp  loopSplitter_test.cpp  test_main.cpp  test_util.h  utils_test.cpp
test/unittests/inputs/: array_create.ll  batchMaker_main.c  batchMaker_main.ll  batchmaker_test1.c  batchmaker_test1.ll  batchmaker_test2.c  batchmaker_test2.ll  batchmaker_test3.c  batchmaker_test3.ll  batchmaker_test4.c  batchmaker_test4_main.c  batchmaker_test5.c  batchmaker_test5_main.c  batchmaker_test6.c  batchmaker_test6_main.c  blockpredication_test1.c  blockpredication_test2.c  blockpredication_test3.c  blockpredication_test4.c  blockpredication_test5.c  blockpredication_test6.c  cache_test1.c  cache_test1.ll  cache_test2.c  cache_test2.ll  cache_test3.c  cache_test3.ll  cache_test4.c  cache_test4.ll  cache_test5  cache_test5.c  cache_test5.ll  cache_test6.c  cache_test6.ll  cache_test7.c  cache_test7.ll  cache_test8.c  cachecheck.c  cachecheck.ll  detect_annotated_vars.ll  (+17 more)
tools/: CMakeLists.txt  tasopt.cpp
